typeの指定により華氏としても値を取得できるようにした。